// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ye-ui/atoms/sections/Card Basic 1`] = `
<div>
  <div
    className=""
    style={
      Object {
        "width": 160,
      }
    }
  >
    <div>
      <span
        style={
          Object {
            "minHeight": "1.5em",
          }
        }
      >
        Card content
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots ye-ui/atoms/sections/Card Horizontal 1`] = `
<div>
  <div
    className=""
    style={
      Object {
        "width": undefined,
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "width": 160,
          }
        }
      >
        <div
          className=""
          style={Object {}}
        >
          <div
            style={Object {}}
          >
            <img
              className=""
              src="https://picsum.photos/160"
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <span
        style={
          Object {
            "minHeight": "1.5em",
          }
        }
      >
        Card content
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots ye-ui/atoms/sections/Card With Image 1`] = `
<div>
  <div
    className=""
    style={
      Object {
        "width": 160,
      }
    }
  >
    <div>
      <div
        style={
          Object {
            "width": 160,
          }
        }
      >
        <div
          className=""
          style={Object {}}
        >
          <div
            style={Object {}}
          >
            <img
              className=""
              src="https://picsum.photos/160"
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <span
        style={
          Object {
            "minHeight": "1.5em",
          }
        }
      >
        Card content
      </span>
    </div>
  </div>
</div>
`;
